--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,45 +2,58 @@
 
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, width=device-width">
-        <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
-        <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
-        <link rel="style_layout" href="styles.css">
-        <title>Amabet: your betting webpage!</title>
-    </head>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, width=device-width">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/static/styles.css">
+    <title>Amabet: your betting webpage!</title>
+</head>
 
-    <body>
-        <nav class="bg-light border navbar navbar-expand-md navbar-light">
-            <div class="container-fluid"> 
-                    <ul class="navbar-nav ms-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/">Amabet: your betting website!</a></li>
-                    </ul>
-                    <ul class="navbar-nav ms-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
-                    </ul>
-                </div>
-        </nav>
-        <nav class="bg-light border navbar navbar-expand-md navbar-light">
-            <div class="container-fluid"> 
-                <div class="collapse navbar-collapse" id="navbar">
-                    <ul class="navbar-nav mt-auto mt-2">
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">Amabet: your betting website!</a>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link" href="/matches">Wedstrijden</a></li>
                         <li class="nav-item"><a class="nav-link" href="/bets">Mijn Bets</a></li>
                         <li class="nav-item"><a class="nav-link" href="/ranking">Ranglijst</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/history">History</a></li> 
+                        <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li ><a class="white" href="/logout"><style></style><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav>        
+    </header>
+    
 
-        {% block main %}{% endblock %}
 
-        <footer class="mb-5 small text-center text-muted">
-            Data provided by <a href="https://www.voetbal.nl/profiel/overzicht/">Voetbal.nl</a>
-        </footer>
+    <div class="container-fluid text-center">    
+        <div class="row content">
+            <div class="col-sm-2 sidenav">
+                <form action="/" method="POST">
+                    <div>
+                        <input autocomplete="on" name="competition" placeholder="Vind competitie" type="text">
+                    </div>
+                    <button class="button1" type="submit">Zoeken</button>
+                </form>
+            </div>
+            {% block main %}{% endblock %}
+        </div>
+    </div>
+    
 
-    </body>
+    <footer>
+        Data provided by <a href="https://live-score-api.com/">live-score.com</a>
+    </footer>
+
+</body>
 
 </html>
