--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,9 +24,10 @@
                         <li class="nav-item"><a class="nav-link" href="/bets">Mijn Bets</a></li>
                         <li class="nav-item"><a class="nav-link" href="/ranking">Ranglijst</a></li>
                         <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
+                        <li class="nav-item"><a class="nav_link">Balance: {{ user_balance }}</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li ><a class="white" href="/logout"><style></style><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+                        <li ><a class="white" href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
                     </ul>
                 </div>
             </div>
