--- a/templates/wedstrijdformulier.html
+++ b/templates/wedstrijdformulier.html
@@ -18,6 +18,7 @@
                 <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="inzet" id="inzet" placeholder="€" type="int"/>
                 <input type="hidden" name="potential_winning" id="potential_winning_input"/>
                 <input type="hidden" name="winner" value="{{ winner }}"/>
+                <input type="hidden" name="competition_id" value="{{ competition_id }}"/>
                 <input type="hidden" name="odds" value="{{ odds }}"/>
                 
             </form>
