--- a/templates/wedstrijdformulier.html
+++ b/templates/wedstrijdformulier.html
@@ -1,59 +1,35 @@
 {% extends "layout.html" %}
 
 {% block main %}
-<div class="match-box">
-    <table class="table">   
-        
-        <div name="odds" value= "{{ index }}" >Odds: {{ odds }}</div>
-        <div class="competition">{{  match_info.competition }}</div>
-        <div> {{ winner_string }}</div>
-        <div class="time-place">{{ match_info.time }}</div>
-        <div class="time-place">{{ match_info.date }}</div>
-    </table>
-
-    <div class="mb-3">
-        <div class=ruimte>
+<div class="all-boxes">
+        <div class="bet-flex"> 
+            <div class="odds_wedstrijdformulier" name="odds" value= "{{ index }}" >De odds zijn: {{ odds }}</div>
+            <div class="kans" id="confirmationModal">
+                Bevestig uw bet
+                U maakt kans op: <span id="potential_winning">n/a</span>
+            </div>
+            <button type="button" class="bet_confirmation" id="confirm_bet">Plaats uw bet</button>
+        </div>  
+        <div class="team1-inzet">
+            <div class="team1"> {{ winner_string }}</div>
             <form action="/wedstrijdformulier/bet/{{ index }}" method="POST" id="create_bet_form">
+                <input class=inzet autocomplete="off" autofocus class="form-control mx-auto w-auto" name="inzet" id="inzet" placeholder="€" type="int"/>
+        
                 <input type="hidden" name="match_id" value = "{{ match_info.match_id }}">
-                <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="inzet" id="inzet" placeholder="€" type="int"/>
                 <input type="hidden" name="potential_winning" id="potential_winning_input"/>
                 <input type="hidden" name="winner" value="{{ winner }}"/>
+                <input type="hidden" name="winner_team" value="{{ winner_team }}"/>
                 <input type="hidden" name="competition_id" value="{{ competition_id }}"/>
                 <input type="hidden" name="odds" value="{{ odds }}"/>
-                
+                <input type="hidden" name="time" value="{{ match_info.time }}"/>
+                <input type="hidden" name="date" value="{{ match_info.date }}"/>
+                <input type="hidden" name="team1" value="{{ match_info.team1 }}"/>
+                <input type="hidden" name="team2" value="{{ match_info.team2 }}"/>
             </form>
         </div>
-    </div>
-    <div class="bet">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            Plaats uw bet
-        </button>
-    </div>
+        <div class="time-place">{{ match_info.time }}</div>
+        <div class="time-place">{{ match_info.date }}</div>       
 </div>
-
-    <div>
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Bevestiging bet</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body" id="confirmationModal">
-                        Bevestig uw bet
-                        U maakt kans op: <span id="potential_winning">n/a</span>
-                    </div>                
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal"> Annuleer </button>
-                        <button type="button" class="btn btn-primary" id="confirm_bet"> Bevestig </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
 
 <script>
     const odds = parseFloat("{{ odds }}");
@@ -78,6 +54,5 @@
         document.getElementById("create_bet_form").submit()
     })
 </script>
-
 
 {% endblock %}
