--- a/templates/login.html
+++ b/templates/login.html
@@ -2,58 +2,42 @@
 
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, width=device-width">
-        <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
-        <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
-        <link rel="style_layout" href="styles.css">
-        <title>Amabet: your betting webpage!</title>
-        <style>
-            body {
-                text-align: center;
-            }
-            h1 {
-                margin: 50px;
-            }
-        </style>
-    </head>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, width=device-width">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
+    <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
+    <link rel="stylesheet" href="/static/styles.css">
+    <title>Amabet: jouw betting website!</title>
+    <link rel="icon" href="https://d1s3ak279u1qfe.cloudfront.net/domains/amabet/img/logo.png" type="image/png">
+</head>
 
-    <body>
-        <nav class="bg-light border navbar navbar-expand-md navbar-light">
-            <div class="container-fluid"> 
-                    <ul class="navbar-nav ms-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/">Amabet: your betting website!</a></li>
-                    </ul>
-                    <ul class="navbar-nav ms-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                    </ul>
+<body>
+    <header>
+        <a class=logo href="/"><img src="https://d1s3ak279u1qfe.cloudfront.net/domains/amabet/img/logo.png" alt="amabet logo" width="70"/> </a>
+        <a class="button" href="/register">Register</a>     
+    </header>
+
+    <div class="background-login">
+        <content class="content">
+            <h1>Please log in!</h1>
+
+            <form action="/login" method="post">
+                <div class="mb-3">
+                    <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
                 </div>
-        </nav>
+                <div class="mb-3">
+                    <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
+                </div>
+                <button class="btn btn-primary" type="submit">Log in</button>
+            </form>
+        </content>
+    </div>
 
-        <h1>Please log in!</h1>
+    <footer>
+        Data provided by <a href="https://live-score-api.com/">live-score.com</a>
+    </footer>
 
-        <form action="/login" method="post">
-            <div class="mb-3">
-                <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
-            </div>
-            <div class="mb-3">
-                <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
-            </div>
-            <button class="btn btn-primary" type="submit">Log in
-                <style>
-                    button {
-                    margin: 30px  
-                    } 
-                </style>
-
-            </button>
-        </form>
-
-        <footer class="mb-5 small text-center text-muted">
-            Data provided by <a href="https://www.voetbal.nl/profiel/overzicht/">Voetbal.nl</a>
-        </footer>
-
-    </body>
+</body>
 
 </html>
