--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="middle">
-        
+
         <div class="flexbox-item flexbox-item1">
             <div>
                 <form class="search-bar" action="/" method="POST">
@@ -42,11 +42,8 @@
             {% endblock %}
         </div>
     </div>
-
-
-
-
-    <footer>
+    
+    <footer class="footer">
         Data provided by <a href="https://live-score-api.com/">live-score.com</a>
     </footer>
 
