--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <a class=logo href="/"><img src="https://d1s3ak279u1qfe.cloudfront.net/domains/amabet/img/logo.png" alt="amabet logo" width="70"/> </a>
+        <a class=logo href="/"><img src="https://d1s3ak279u1qfe.cloudfront.net/domains/amabet/img/logo.png" alt="amabet logo" width="70"/></a>
         <a class="button" href="/register">Register</a>     
     </header>
 
@@ -34,7 +34,7 @@
         </content>
     </div>
 
-    <footer>
+    <footer class="footer">
         Data provided by <a href="https://live-score-api.com/">live-score.com</a>
     </footer>
 
